# comic-chat

./: .gitignore  README.md
.github/workflows/: .keep
docs/: index.html
qt-port/: CMakeLists.txt  README.md
qt-port/app/: ComicWidget.cpp  ComicWidget.h  MainWindow.cpp  MainWindow.h  main.cpp
qt-port/engine/: arc.cpp  art_paths.cpp  art_paths.h  avatario.cpp  avatario.h  backdrop_qt.cpp  backdrop_qt.h  bbox.cpp  bbox.h  chat_constants.h  common.h  image.cpp  image.h  pe.cpp  pe.h  pose.cpp  pose.h  scene.cpp  scene.h  spline.cpp  spline.h  traj.cpp  traj.h  vector2d.cpp  vector2d.h
qt-port/net/: FreeqAuth.cpp  FreeqAuth.h  IrcClient.cpp  IrcClient.h  RpgActorClient.cpp  RpgActorClient.h
qt-port/platform/: ICanvas.h  QtCanvas.cpp  QtCanvas.h  types.h
